// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CustomButtom Danger 1`] = `
<button
  className="sc-bdfBwQ hNWLhT"
  onClick={[Function]}
  opacity="1"
  size="medium"
>
  <div
    className="sc-gsTCUz czXwIi"
  >
     
    <span>
       
      danger
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Danger Highlight 1`] = `
<button
  className="sc-bdfBwQ gSFmgk"
  onClick={[Function]}
  opacity="1"
  size="medium"
>
  <div
    className="sc-gsTCUz czXwIi"
  >
     
    <span>
       
      7 min
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Danger Rounded 1`] = `
<button
  className="sc-bdfBwQ bUKPAx"
  onClick={[Function]}
  opacity="1"
  size="medium"
>
  <div
    className="sc-gsTCUz czXwIi"
  >
     
    <span>
       
      7 min
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Green 1`] = `
<button
  className="sc-bdfBwQ haiiuS"
  onClick={[Function]}
  opacity="1"
  size="medium"
>
  <div
    className="sc-gsTCUz czXwIi"
  >
    <img
      alt="Icon Video"
      src="video.svg"
    />
     
    <span>
       
      video conferencia
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Hard On Hold 1`] = `
<button
  className="sc-bdfBwQ uTiHV"
  onClick={[Function]}
  opacity="1"
  size="medium"
>
  <div
    className="sc-gsTCUz czXwIi"
  >
     
    <span>
       
      7 min
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Info 1`] = `
<button
  className="sc-bdfBwQ ldtDhq"
  onClick={[Function]}
  opacity="1"
  size="medium"
>
  <div
    className="sc-gsTCUz czXwIi"
  >
     
    <span>
       
      0990
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Light 1`] = `
<button
  className="sc-bdfBwQ ljRBUR"
  onClick={[Function]}
  opacity="1"
  size="medium"
>
  <div
    className="sc-gsTCUz czXwIi"
  >
     
    <span>
       
      7 min
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Light Rounded 1`] = `
<button
  className="sc-bdfBwQ hBEONj"
  onClick={[Function]}
  opacity="1"
  size="medium"
>
  <div
    className="sc-gsTCUz czXwIi"
  >
     
    <span>
       
      7 min
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom On Hold 1`] = `
<button
  className="sc-bdfBwQ krRdRS"
  onClick={[Function]}
  opacity="1"
  size="medium"
>
  <div
    className="sc-gsTCUz czXwIi"
  >
     
    <span>
       
      7 min
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Primary 1`] = `
<button
  className="sc-bdfBwQ iaStPN"
  onClick={[Function]}
  opacity="1"
  size="large"
>
  <div
    className="sc-gsTCUz czXwIi"
  >
    <img
      alt="Icon Plus"
      src="video.svg"
    />
     
    <span>
       
      Primary
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Primary Highlight 1`] = `
<button
  className="sc-bdfBwQ hqILhg"
  onClick={[Function]}
  opacity="1"
  size="medium"
>
  <div
    className="sc-gsTCUz czXwIi"
  >
     
    <span>
       
      7 min
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomMenu Horizontal 1`] = `
<div
  className="sc-dlfnbm fmQbiS"
>
  <div
    className="sc-hKgILt bPiKPM"
  >
    <nav>
      <ul>
        <li
          id="ele0"
          onClick={[Function]}
          onMouseOver={[Function]}
        >
          <span>
            Todas
          </span>
        </li>
        <li
          id="ele1"
          onClick={[Function]}
          onMouseOver={[Function]}
        >
          <span>
            Pa Virtual
          </span>
        </li>
        <li
          id="ele2"
          onClick={[Function]}
          onMouseOver={[Function]}
        >
          <span>
            Premium
          </span>
        </li>
        <li
          id="ele3"
          onClick={[Function]}
          onMouseOver={[Function]}
        >
          <span>
            Teletriagem
          </span>
        </li>
        <li
          id="ele4"
          onClick={[Function]}
          onMouseOver={[Function]}
        >
          <span>
            Hematologia
          </span>
        </li>
        <li
          id="ele5"
          onClick={[Function]}
          onMouseOver={[Function]}
        >
          <span>
            COVID-19
          </span>
        </li>
      </ul>
    </nav>
  </div>
  <section
    className="sc-eCssSg kfUUyx"
  >
    <div>
       teste0 
    </div>
  </section>
</div>
`;

exports[`Storyshots DefaultMenu Vertical 1`] = `
Array [
  <div
    className="sc-gKsewC fiigdW"
    id="hamburguer"
    onClick={[Function]}
  >
    <img
      alt="Menu hamburguer"
      src="menu-hamburguer.png"
    />
  </div>,
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      className="sc-jSgupP kICXO"
      id="menu"
    >
      <div
        className="default-logo"
      >
        <img
          alt="Logo Einsten"
          src="logo-einsten.svg"
        />
      </div>
      <nav>
        <ul>
          <li>
            <a
              href="/home"
              onClick={[Function]}
            >
              <svg
                onClick={[Function]}
              >
                acionamentos.svg
              </svg>
            </a>
          </li>
          <li>
            <a
              href="/home"
              onClick={[Function]}
            >
              <svg
                onClick={[Function]}
              >
                agendamentos.svg
              </svg>
            </a>
          </li>
          <li>
            <a
              href="/home"
              onClick={[Function]}
            >
              <svg
                onClick={[Function]}
              >
                hitstorico.svg
              </svg>
            </a>
          </li>
          <li>
            <a
              href="/home"
              onClick={[Function]}
            >
              <svg
                onClick={[Function]}
              >
                support.svg
              </svg>
            </a>
          </li>
          <li>
            <a
              href="/home"
              onClick={[Function]}
            >
              <svg
                onClick={[Function]}
              >
                activity.svg
              </svg>
            </a>
          </li>
          <li>
            <a
              href="/"
              onClick={[Function]}
            >
              <svg
                onClick={[Function]}
              >
                gerenciar_cancelamentos.svg
              </svg>
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <section
      className="sc-iBPRYJ eCNljB"
    >
      awq
    </section>
  </div>,
]
`;
